--- a/pom.xml
+++ b/pom.xml
@@ -25,4 +25,14 @@
       </plugin>
     </plugins>
   </build>
+   <distributionManagement>
+      <snapshotRepository>
+        <id>nexus-snapshots</id>
+        <url>http://3.109.133.36:8081/repository/maven-snapshots/</url>
+      </snapshotRepository>
+      <repository>
+        <id>nexus-releases</id>
+        <url>http://3.109.133.36:8081/repository/maven-releases/</url>
+      </repository>
+    </distributionManagement>
 </project>
