--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   <groupId>com.app.raghu</groupId>
   <artifactId>webapp</artifactId>
   <packaging>war</packaging>
-  <version>3.0-RELEASE</version>
-  <name>01-maven-web-app</name>
+  <version>1.0.0</version>
+  <name>webapp1</name>
   <url>http://maven.apache.org</url>
  
   <dependencies>
